[package]
name = "eoss-processor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eoss-processor"
path = "src/main.rs"

[dependencies]
polars = { version = "0.46", features = ["lazy", "temporal", "csv", "json", "parquet", "round_series", "rolling_window", "dtype-struct"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
rust_xlsxwriter = { version = "0.82", features = ["chrono"] }
nalgebra = "0.33"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
regex = "1"
anyhow = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
